APIs/netboxdemo.com/2.4/java-client/docs/Site.md


# Site


## Properties

| Name | Type | Description | Notes |
|------------ | ------------- | ------------- | -------------|
|**asn** | **Integer** |  |  [optional] |
|**comments** | **String** |  |  [optional] |
|**contactEmail** | **String** |  |  [optional] |
|**contactName** | **String** |  |  [optional] |
|**contactPhone** | **String** |  |  [optional] |
|**countCircuits** | **Integer** |  |  [optional] [readonly] |
|**countDevices** | **Integer** |  |  [optional] [readonly] |
|**countPrefixes** | **Integer** |  |  [optional] [readonly] |
|**countRacks** | **Integer** |  |  [optional] [readonly] |
|**countVlans** | **Integer** |  |  [optional] [readonly] |
|**created** | **LocalDate** |  |  [optional] [readonly] |
|**customFields** | **Object** |  |  [optional] |
|**description** | **String** |  |  [optional] |
|**facility** | **String** |  |  [optional] |
|**id** | **Integer** |  |  [optional] [readonly] |
|**lastUpdated** | **OffsetDateTime** |  |  [optional] [readonly] |
|**latitude** | **BigDecimal** |  |  [optional] |
|**longitude** | **BigDecimal** |  |  [optional] |
|**name** | **String** |  |  |
|**physicalAddress** | **String** |  |  [optional] |
|**region** | [**NestedRegion**](NestedRegion.md) |  |  [optional] |
|**shippingAddress** | **String** |  |  [optional] |
|**slug** | **String** |  |  |
|**status** | [**Status**](Status.md) |  |  [optional] |
|**tags** | **List&lt;String&gt;** |  |  [optional] |
|**tenant** | [**NestedTenant**](NestedTenant.md) |  |  [optional] |
|**timeZone** | **String** |  |  [optional] |



